--- a/app/globals.css
+++ b/app/globals.css
@@ -50,4 +50,8 @@
   .flex-center {
     @apply flex items-center justify-center;
   }
+
+  .button-gradient {
+    @apply w-full transition-all bg-gradient-to-r from-blue-600 to-blue-500 text-white hover:shadow-md;
+  }
 }
