--- a/app/globals.css
+++ b/app/globals.css
@@ -54,4 +54,12 @@
   .button-gradient {
     @apply w-full transition-all bg-gradient-to-r from-blue-600 to-blue-500 text-white hover:shadow-md;
   }
+
+  .bg-primary {
+    @apply from-blue-700 to-blue-400 bg-gradient-to-r rounded-r-md;
+  }
+
+  .bg-secondary {
+    @apply bg-gray-200;
+  }
 }
